# brain-box

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  prep.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: aggregation.py  content_restructurer.py  decision_maker.py  github_publisher.py  organization.py
app/config/: settings.py
app/database/: models.py  repository.py
app/telegram/: bot.py  handlers.py
tests/: conftest.py  test_agents.py  test_config.py  test_content_restructurer.py  test_database.py  test_decision_maker.py  test_decision_repository.py  test_github_publisher.py  test_publish_trigger.py  test_storage.py
